<resources>
    <string name="app_name">DoroMusic</string>
    <string name="search">Search</string>
    <string name="search_hint">Search songs</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="folders">Folders</string>
    <string name="playlists">Playlists</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_nav_key">Unknown NavKey: %1$s</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="filter">Filter</string>
    <string name="more">More</string>
    <string name="play_all">Play All</string>
    <string name="shuffle_play">Shuffle Play</string>
    <string name="filter_sort">Filter &amp; Sort</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_artist">Artist</string>
    <string name="sort_by_date_added">Date Added</string>
    <string name="display_mode">Display</string>
    <string name="display_compact">Compact List</string>
    <string name="display_list">List</string>
    <string name="display_grid">Grid</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown_genre">Unknown Genre</string>
    <string name="unknown_year">Unknown Year</string>
    <string name="unknown_mime_type">Unknown MIME Type</string>
    <string name="more_options">More Options</string>
    <string name="song_count">%1$d Songs</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="delete_playlist_confirm">Are you sure you want to delete this playlist?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="playlist_count">%1$d Items</string>
    <string name="create_playlist">New Playlist</string>
    <string name="playlist_name_hint">Playlist Name</string>
    <string name="confirm">Confirm</string>
    <string name="favorites_playlist">Favorites</string>
    <string name="media_store_error">Unable to access media library</string>
    <string name="scan_completed">Scanned %1$d songs</string>
    <string name="artist_count">%1$d Artists</string>
    <string name="permission_storage_required">Storage permission is required to scan music</string>
    <string name="permission_permanently_denied">Storage permission has been permanently denied. Please enable it in Settings to scan music.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="add_to_next">Add to Next</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="remove_the_playlist">Remove the playlist</string>
    <string name="details">Details</string>
    <string name="playlist_created_success">Playlist created</string>
    <string name="playlist_created_failed">Failed to create playlist</string>
    <string name="playlist_already_exists">Playlist already exists</string>
    <string name="playlist_deleted_success">Playlist deleted</string>
    <string name="playlist_deleted_failed">Failed to delete playlist</string>
    <string name="remove_success">Removed</string>
    <string name="remove_failed">Remove failed</string>
    <string name="add_success">Added</string>
    <string name="add_failed">Add failed</string>
    <string name="song_already_in_playlist">Song already in playlist</string>
    <string name="album_cover">Album cover</string>
    <string name="title">Title</string>
    <string name="album">Album</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="duration">Duration</string>
    <string name="mime_type">MIME Type</string>
    <string name="path">Path</string>
    <string name="playback_settings">Playback</string>
    <string name="playback_settings_desc">Set default play mode</string>
    <string name="display_settings">Display</string>
    <string name="display_settings_desc">Customize appearance</string>
    <string name="scan_settings">Scan</string>
    <string name="scan_settings_desc">Filter and exclude folders</string>
    <string name="about_app">About</string>
    <string name="default_play_mode">Default Play Mode</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="min_duration_filter">Min Duration Filter</string>
    <string name="min_duration_filter_value">%1$d seconds</string>
    <string name="excluded_folders">Excluded Folders</string>
    <string name="no_excluded_folders">No excluded folders</string>
    <string name="excluded_folders_count">%1$d folders</string>
    <string name="version">Version</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="clear">Clear</string>
    <string name="no_filter">No filter</string>
    <string name="seconds_value">%1$d seconds</string>
    <string name="no_folders">No folders found</string>
    <string name="play_mode_repeat">Sequential</string>
    <string name="play_mode_shuffle">Shuffle</string>
    <string name="play_mode_repeat_one">Repeat One</string>
    <string name="dark_theme_system">Follow System</string>
    <string name="dark_theme_light">Light</string>
    <string name="dark_theme_dark">Dark</string>
    <string name="github_url">https://github.com/DoroWolf/DoroMusic</string>
    <string name="play_queue_title">Play Queue</string>
    <string name="play_queue_count">%1$d / %2$d</string>
    <string name="notification_channel_playback">Music Playback</string>
    <string name="pause">Pause</string>
    <string name="previous_track">Previous track</string>
    <string name="next_track">Next track</string>
    <string name="play_mode">Play mode</string>
    <string name="play_queue">Show play queue</string>
    <string name="back">Back</string>
    <string name="collapse_player">Collapse player</string>
    <string name="no_lyrics">No lyrics</string>
    <string name="remove_from_queue">Remove from queue</string>
    <string name="choose_browser">Choose browser</string>
    <string name="seconds_short">%1$ds</string>
    <string name="widget_name">Music Player</string>
    <string name="widget_description">Control music playback from your home screen</string>
    <string name="widget_no_song">No song playing</string>
    <string name="widget_no_artist">Unknown artist</string>
</resources>